--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     
     <main>
 
-        <div class="cell"></div>
-
         <!--HERO PARTY SECTION-->
         <div class="hero party">
 
@@ -101,6 +99,11 @@
     </main>
 
     <!--SCRIPTS-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="map.js"></script>
+    <script src="character.js"></script>
+    <script src="hero.js"></script>
+    <script src="enemy.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
