--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
         </div>
     </main>
 
+
     <!--SCRIPTS-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="map.js"></script>
-    <script src="character.js"></script>
-    <script src="hero.js"></script>
-    <script src="enemy.js"></script>
-    <script src="main.js"></script>
+    <script src="Resources/JS/map.js"></script>
+    <script src="Resources/JS/character.js"></script>
+    <script src="Resources/JS/hero.js"></script>
+    <script src="Resources/JS/enemy.js"></script>
+    <script src="Resources/JS/main.js"></script>
 </body>
 </html>
