Polished commenting. Removed Map class. Started making the map.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     
 </head>
 <body>
-    
     <main>
 
         <!--HERO PARTY SECTION-->
@@ -101,10 +100,10 @@
 
     <!--SCRIPTS-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="Resources/JS/map.js"></script>
-    <script src="Resources/JS/character.js"></script>
-    <script src="Resources/JS/hero.js"></script>
-    <script src="Resources/JS/enemy.js"></script>
-    <script src="Resources/JS/main.js"></script>
+    <script type="module" src="Resources/JS/cell.js"></script>
+    <script type="module" src="Resources/JS/character.js"></script>
+    <script type="module" src="Resources/JS/hero.js"></script>
+    <script type="module" src="Resources/JS/enemy.js"></script>
+    <script type="module" src="Resources/JS/main.js"></script>
 </body>
 </html>
