--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <main>
+        <div id="table">
+        </div>
 
         <!--HERO PARTY SECTION-->
         <div class="hero party">
