Minor tweaks. Began work on character sheets.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
     
 </head>
 <body>
+
+    <!--BATTLE MAP AND PARTY UI SECTION-->
     <main>
         <div id="table">
         </div>
 
-        <!--HERO PARTY SECTION-->
+        <!--HERO PARTY-->
         <div class="hero party">
-
             <!--INDIVIDUAL MEMBERS WILL BE POPULATED HERE-->
+
             <div class=" hero member">
 
                 <div class="info">
@@ -56,9 +58,10 @@
             <button id="newHero"><img src="Resources/Images/Plus Sign.png"></img></button>
         </div>
 
-        <!--ENEMY PARTY SECTION-->
+        <!--ENEMY PARTY-->
         <div class="enemy party">
             <!--INDIVIDUAL MEMBERS WILL BE POPULATED HERE-->
+
             <div class="enemy member">
 
                 <div class="info">
@@ -98,6 +101,38 @@
             <button id="newEnemy"><img src="Resources/Images/Plus Sign.png"></img></button>
         </div>
     </main>
+    <!--END BATTLE MAP AND PARTY UI SECTION-->
+
+    <!--CHARACTER SHEETS SECTION-->
+    <div class="friendly sheet">
+        <div class="top">
+            <div class="general">
+                <h1>Warforged</h1>
+                <h3>Tank</h3>
+                <h3>Level 3</h3>
+            </div>
+            <div class="sheetStats">
+
+            </div>
+            <div class="statuses">
+                <div class="resistances">
+
+                </div>
+                <div class="weaknesses">
+
+                </div>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="tabs">
+
+            </div>
+        </div>
+    </div>
+
+
+
+
 
 
     <!--SCRIPTS-->
